Fixing menu effects on mobile

--- a/assets/scss/_menu.scss
+++ b/assets/scss/_menu.scss
@@ -105,7 +105,7 @@
             @apply transform skew-y-6 duration-500;
         }
         .content {
-            @apply transform duration-500;
+            @apply transform duration-1000;
         }
     }
     .hamburger-inner,
